ingress.yml
# * is added in front of infomrations that needs to be updated for tracking purposes
# This yaml is for the deployment of prometheus and grafana services with use of ingress controller 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hipster-shop-ingress*
  annotations:
    # Core Ingress Settings  
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:000000000000:certificate/5bde485b-cd80-4224-9f*
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-name: exam-alb*  # give ALB a meaningfull name otherwise a random name is assigned by AWS
    alb.ingress.kubernetes.io/group.name: exam-ingress-grp*
spec:
  rules:
  - host: *
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    # Core Ingress Settings  
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:000000000000:certificate/5bde485b-cd80-4224z*
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-name: exam-alb*  # give ALB a meaningfull name otherwise a random name is assigned by AWS
    alb.ingress.kubernetes.io/group.name: exam-ingress-grp*
spec:
  rules:
  - host: *
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    # Core Ingress Settings  
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:000000000000:certificate/5b86cf*
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-name: exam-alb*  # give ALB a meaningfull name otherwise a random name is assigned by AWS
    alb.ingress.kubernetes.io/group.name: exam-ingress-grp*
spec:
  rules:
  - host: *
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
